quoting-CypressTK1/force-app/main/default/objects/ScopeParameterTemplate__c/ScopeParameterTemplate__c.object-meta.xml
<CustomObject>
    <label>Scope Parameter Template</label>
    <nameField>
        <label>Scope Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Parameter Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>