quoting-CypressTK1/force-app/main/default/objects/ScopeParameterTemplate__c/fields/ActivityGroupTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ActivityGroupTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Group Template</label>
    <referenceTo>ActivityGroupTemplate__c</referenceTo>
    <relationshipLabel>Scope Parameter Templates</relationshipLabel>
    <relationshipName>ScopeParameterTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>