quoting-CypressTK1/force-app/main/default/objects/ScopeParameterTemplate__c/fields/ActivityTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ActivityTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Template</label>
    <referenceTo>ActivityTemplate__c</referenceTo>
    <relationshipLabel>Scope Parameter Templates</relationshipLabel>
    <relationshipName>ScopeParameterTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>