quoting-CypressTK1/force-app/main/default/objects/ScopeParameterTemplate__c/fields/AllowedValues__c.field-meta.xml
<CustomField>
    <fullName>AllowedValues__c</fullName>
    <label>Allowed Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>