quoting-CypressTK1/force-app/main/default/objects/ScopeParameterTemplate__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>Hashtag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>