quoting-CypressTK1/force-app/main/default/objects/ScopeParameterTemplate__c/fields/EstimateTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Template</label>
    <referenceTo>EstimateTemplate__c</referenceTo>
    <relationshipLabel>Scope Parameter Templates</relationshipLabel>
    <relationshipName>ScopeParameterTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>